[package]
name = "bpe"
version = "0.1.0"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "3.0.0-beta.1"
anyhow = "1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"